# yabuil

./: .gitattributes  Cargo.toml  LICENSE-MIT  README.md
assets/layouts/: bevy_image.layout.json  button.layout.json  custom_image.layout.json  main_menu.layout.json  rivals_main_menu1.layout.json  rivals_menu_button.layout.json
editor/: Cargo.toml
editor/src/: animation_view.rs  layout_view.rs  lib.rs  node_view.rs  reflect.rs  svg.rs  visualization.rs
examples/: bevy_image.rs  main_menu.rs  rivals.rs
src/: animation.rs  asset.rs  builtin.rs  components.rs  input_detection.rs  lib.rs  node.rs  views.rs
src/asset/: deserialize_animation.rs  deserialize_layout.rs  helpers.rs
src/components/: spawning.rs
src/input_detection/: controller.rs
