[workspace]
members = ["editor"]

[workspace.dependencies]
bevy = "0.12"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-value = "0.7"
thiserror = "1"

[package]
name = "yabuil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-value.workspace = true
thiserror.workspace = true
indexmap = { version = "2.1.0", features = ["serde"] }

[dev-dependencies]
bevy-inspector-egui = "0.21"
editor = { path = "./editor" }